Fixing background image on Ios

--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,7 @@ header .info-container .phone {
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
+    /* background-attachment: fixed; */
     position: relative;
 
 }
